--- a/Travel Partner/app/src/main/res/values/colors.xml
+++ b/Travel Partner/app/src/main/res/values/colors.xml
@@ -11,5 +11,25 @@
     <color name="notification">#C9379D</color>
     <color name="search">#E6A919</color>
     <color name="profile">#1194AA</color>
+    <color name="colorPrimary">#ED2173</color>
+    <color name="colorPrimaryDark">#222934</color>
+    <color name="colorAccent">#ED2173</color>
+
+
+    <color name="profilColorPrimary">#49BEFF</color>
+    <color name="profilColorPrimaryDark">#65DCE5</color>
+    <color name="profilColorAccent">#0D5D98</color>
+
+    <color name="address">#2F7092</color>
+    <color name="followers">#0D5D98</color>
+    <color name="headings">#3797CF</color>
+    <color name="solidCircle">#AAFFFFFF</color>
+    <color name="circleBorder">#50FFFFFF</color>
+    <color name="gradEnd">#67EFC8</color>
+    <color name="gradStart">#63C9FF</color>
+    <color name="followersBg">#65DCE5</color>
+    <color name="followingBg">#49BEFF</color>
+    <color name="grey">#E5E5E5</color>
+
 
 </resources>
