My trips Tab 80% entwickelt

--- a/Travel Partner/app/src/main/res/values/colors.xml
+++ b/Travel Partner/app/src/main/res/values/colors.xml
@@ -31,5 +31,8 @@
     <color name="followingBg">#49BEFF</color>
     <color name="grey">#E5E5E5</color>
 
+    <color name="tripsTextColor">#AFAFAF</color>
+    <color name="lightGrey">#F2F2F2</color>
+
 
 </resources>
