--- a/Travel Partner/app/src/main/res/layout/activity_dashboard.xml
+++ b/Travel Partner/app/src/main/res/layout/activity_dashboard.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".Dashboard">
 
 
     <FrameLayout
@@ -35,8 +37,8 @@
         android:elevation="16dp"
         android:gravity="center"
         app:itemBackground="@color/colorPrimary"
-        app:cnb_menuResource="@menu/bottom_menu"
+        app:cnb_menuResource="@menu/menu_navigation"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
