--- a/Travel Partner/app/src/main/res/layout/activity_home.xml
+++ b/Travel Partner/app/src/main/res/layout/activity_home.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".HomeActivity"
     android:orientation="vertical">
-
 
     <com.denzcoskun.imageslider.ImageSlider
         android:id="@+id/image_slider"
@@ -41,5 +43,5 @@
 
     </com.denzcoskun.imageslider.ImageSlider>
 
-
 </LinearLayout>
+</layout>
