--- a/Travel Partner/app/src/main/res/layout/activity_login.xml
+++ b/Travel Partner/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
@@ -14,12 +15,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="image"
-        android:scaleType="fitXY"
-        android:src="@drawable/image5"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/image"
+            android:scaleType="fitXY"
+            android:src="@drawable/image5_login"/>
     </FrameLayout>
 
     <TextView
@@ -27,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginTop="35dp"
-        android:text="Login Screen"
+        android:text="@string/login_screen"
         android:textColor="#222934"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -43,17 +44,18 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="35dp"
         android:layout_marginEnd="16dp"
-        android:hint="Email Id"
+        android:hint="@string/email_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_title">
 
-    <EditText
-        android:id="@+id/ed_login_mail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        tools:text="abc@gmail.com"/>
+        <EditText
+            android:id="@+id/ed_login_mail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            tools:text="abc@gmail.com"
+            tools:ignore="Autofill"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -63,7 +65,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
-        android:hint="Password"
+        android:hint="@string/password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_email">
@@ -73,7 +75,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            tools:text="123456"/>
+            tools:text="123456"
+            tools:ignore="Autofill"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -87,7 +90,7 @@
         android:background="@color/colorAccent"
         android:foreground="?attr/selectableItemBackground"
         android:gravity="center"
-        android:text="Login"
+        android:text="@string/login"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -111,7 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:padding="5dp"
-            android:text = "Don\'t have an account?"/>
+            android:text = "@string/don_t_have_an_account"/>
 
         <TextView
             android:id="@+id/register"
@@ -120,9 +123,10 @@
             android:layout_marginTop="16dp"
             android:foreground="?attr/selectableItemBackground"
             android:padding="5dp"
-            android:text = "Register"
+            android:text = "@string/register"
             android:textStyle="bold"/>
 
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
