--- a/Travel Partner/app/src/main/res/layout/fragment_trips1.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_trips1.xml
@@ -1,70 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.Trips1Fragment">
+    tools:context=".TripsFragment1">
 
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="180dp"
+        android:layout_gravity="center_horizontal"
+        android:adjustViewBounds="true"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_my_trips"
+        android:importantForAccessibility="no"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:textSize="20dp"
+        android:layout_marginTop="290dp"
+        android:textSize="20sp"
         android:fontFamily="@font/roboto"
-        android:text="New Trip"/>
-
-    <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="50dp"
-            android:background="@color/lightGrey"/>
-
+        android:text="@string/create_your_first_trip" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:layout_marginTop="75dp"
-        android:textSize="20dp"
-        android:layout_marginLeft="30dp"
+        android:textColor="@color/tripsTextColor"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="315dp"
+        android:textSize="14sp"
         android:fontFamily="@font/roboto"
-        android:text="Where are you going?" />
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="32dp">
-        <AutoCompleteTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/autoCompleteTextView"
-            android:layout_weight="1"
-            android:inputType="none"
-            android:text="Choose Destination"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
+        android:text="@string/you_did_not_create_any_trip_yet_what_are_you_waiting_for" />
 
     <Button
-        android:id="@+id/next_button"
-        android:layout_width="match_parent"
+        android:id="@+id/create_first_trip"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Next"
-        android:textSize="18dp"
+        android:text="@string/create_first_trip"
+        android:textSize="18sp"
         android:fontFamily="@font/roboto"
         android:textAllCaps="false"
-        android:layout_marginTop="630dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="50dp"
-        android:background="@drawable/create_trip_buttom"
+        android:layout_marginTop="352dp"
+        android:background="@drawable/create_trip_button"
         />
 
 </FrameLayout>
