--- a/Travel Partner/app/src/main/res/layout/activity_dashboard.xml
+++ b/Travel Partner/app/src/main/res/layout/activity_dashboard.xml
@@ -8,6 +8,7 @@
     tools:context=".Dashboard">
 
 
+
     <FrameLayout
         android:id="@+id/fl_wrapper"
         android:layout_height="match_parent"
@@ -15,7 +16,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">
+    </FrameLayout>
 
 
     <androidx.viewpager.widget.ViewPager
