--- a/Travel Partner/app/src/main/res/layout/activity_dashboard.xml
+++ b/Travel Partner/app/src/main/res/layout/activity_dashboard.xml
@@ -8,7 +8,6 @@
     tools:context=".Dashboard">
 
 
-
     <FrameLayout
         android:id="@+id/fl_wrapper"
         android:layout_height="match_parent"
@@ -16,7 +15,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        >
     </FrameLayout>
 
 
