--- a/Travel Partner/app/src/main/res/layout/fragment_trips4.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_trips4.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TripsFragment2">
+    tools:context=".TripsFragment4">
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,6 +23,7 @@
         android:layout_marginTop="50dp"
         android:background="@color/lightGrey"/>
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,50 +32,25 @@
         android:textSize="20sp"
         android:layout_marginStart="30dp"
         android:fontFamily="@font/roboto"
-        android:text="@string/for_how_long"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/tripsTextColor"
-        android:layout_marginTop="122dp"
-        android:layout_marginStart="30dp"
-        android:textSize="14sp"
-        android:fontFamily="@font/roboto"
-        android:text="@string/from"
-        android:id="@+id/to_date"/>
+        android:text="@string/where_are_you_going" />
 
-    <EditText
-        android:inputType="text"
-        android:layout_width="340dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="218dp"
-        android:id="@+id/to"
-        android:hint="@string/choose_end_date"
-        android:textSize="15sp"
-        android:autofillHints="@string/choose_end_date"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/tripsTextColor"
-        android:layout_marginTop="200dp"
-        android:layout_marginStart="30dp"
-        android:textSize="14sp"
-        android:fontFamily="@font/roboto"
-        android:text="@string/to"
-        android:id="@+id/tv_date"/>
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="32dp">
+        <AutoCompleteTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/autoCompleteTextView"
+            android:layout_weight="1"
+            android:inputType="none"
+            android:text="@string/choose_destination"/>
 
-    <EditText
-        android:inputType="text"
-        android:layout_width="340dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="140dp"
-        android:id="@+id/from"
-        android:hint="@string/choose_start_date"
-        android:textSize="15sp"
-        android:autofillHints="@string/choose_start_date"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/previous_button"
@@ -105,7 +82,6 @@
         android:layout_marginLeft="100dp"
         android:background="@drawable/create_trip_button"
         />
-
 
 
 </FrameLayout>
