--- a/Travel Partner/app/src/main/res/layout/fragment_trips5.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_trips5.xml
@@ -4,7 +4,7 @@
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TripsFragment2">
+    tools:context=".TripsFragment5">
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,54 +26,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:layout_marginTop="75dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="80dp"
         android:textSize="20sp"
-        android:layout_marginStart="30dp"
         android:fontFamily="@font/roboto"
-        android:text="@string/for_how_long"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/tripsTextColor"
-        android:layout_marginTop="122dp"
-        android:layout_marginStart="30dp"
-        android:textSize="14sp"
-        android:fontFamily="@font/roboto"
-        android:text="@string/from"
-        android:id="@+id/to_date"/>
+        android:text="@string/what_is_the_plan_question"/>
 
     <EditText
-        android:inputType="text"
-        android:layout_width="340dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="218dp"
-        android:id="@+id/to"
-        android:hint="@string/choose_end_date"
-        android:textSize="15sp"
-        android:autofillHints="@string/choose_end_date"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/tripsTextColor"
-        android:layout_marginTop="200dp"
-        android:layout_marginStart="30dp"
-        android:textSize="14sp"
+        android:inputType="textMultiLine"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:background="@drawable/plan_edit_text"
         android:fontFamily="@font/roboto"
-        android:text="@string/to"
-        android:id="@+id/tv_date"/>
-
-    <EditText
-        android:inputType="text"
-        android:layout_width="340dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="140dp"
-        android:id="@+id/from"
-        android:hint="@string/choose_start_date"
-        android:textSize="15sp"
-        android:autofillHints="@string/choose_start_date"/>
+        android:text="@string/what_is_the_plan"
+        android:gravity="start"
+        android:textColor="@color/grey_font"
+        android:autofillHints=""
+        android:hint="@string/what_is_the_plan"/>
 
     <Button
         android:id="@+id/previous_button"
@@ -92,11 +65,11 @@
         />
 
     <Button
-        android:id="@+id/next_button"
+        android:id="@+id/publish_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="@string/next"
+        android:text="@string/publish"
         android:textSize="18sp"
         android:fontFamily="@font/roboto"
         android:textAllCaps="false"
@@ -105,8 +78,6 @@
         android:layout_marginLeft="100dp"
         android:background="@drawable/create_trip_button"
         />
-
-
 
 </FrameLayout>
 </layout>
