--- a/Travel Partner/app/src/main/res/layout/fragment_trips5.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_trips5.xml
@@ -34,19 +34,21 @@
         android:text="@string/what_is_the_plan_question"/>
 
     <EditText
+        android:id="@+id/the_plan"
         android:inputType="textMultiLine"
         android:layout_width="match_parent"
         android:layout_height="170dp"
         android:layout_marginTop="120dp"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
+        android:padding="12dp"
+        android:textSize="18sp"
         android:background="@drawable/plan_edit_text"
         android:fontFamily="@font/roboto"
-        android:text="@string/what_is_the_plan"
+        android:hint="@string/what_is_the_plan"
         android:gravity="start"
-        android:textColor="@color/grey_font"
-        android:autofillHints=""
-        android:hint="@string/what_is_the_plan"/>
+        android:textColor="@color/black"
+        android:autofillHints=""/>
 
     <Button
         android:id="@+id/previous_button"
