--- a/Travel Partner/app/src/main/res/layout/fragment_profile.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_profile.xml
@@ -42,7 +42,6 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15sp"
                 android:fontFamily="sans-serif-light"
-                android:text="@string/name"
                 android:textColor="@color/white"
                 android:textSize="32sp" />
             <TextView
@@ -52,7 +51,6 @@
                 android:layout_below="@+id/name"
                 android:layout_centerHorizontal="true"
                 android:fontFamily="sans-serif"
-                android:text="@string/berlin_germany"
                 android:textAllCaps="true"
                 android:textColor="@color/address"
                 android:textSize="14sp" />
@@ -96,7 +94,6 @@
                         android:id="@+id/about_me"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
-                        android:text="@string/profile_text"
                         android:textColor="#000000"
                         android:textSize="18sp" />
                     <TextView
@@ -110,7 +107,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
-                        android:text="@string/profile_email"
+                        android:id="@+id/email"
                         android:textColor="#000000"
                         android:textSize="18sp" />
 
@@ -137,7 +134,6 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="sans-serif-light"
                             android:id="@+id/phone_number"
-                            android:text="@string/profile_phone_number"
                             android:textColor="#000000"
                             android:textSize="18sp" />
 
@@ -166,7 +162,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="sans-serif-light"
-                            android:text="@string/twitter_profile"
                             android:id="@+id/twitter"
                             android:textColor="#000000"
                             android:textSize="18sp" />
@@ -197,7 +192,6 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="sans-serif-light"
                             android:id="@+id/facebook"
-                            android:text="@string/facebook_profile"
                             android:textColor="#000000"
                             android:textSize="18sp" />
 
