--- a/Travel Partner/app/src/main/res/layout/fragment_choose_name.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_choose_name.xml
@@ -7,13 +7,11 @@
     tools:context=".ChooseNameFragment">
 
     <TextView
+        style="@style/DefaultText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:textSize="20sp"
-        android:fontFamily="@font/roboto"
         android:text="Create name"/>
 
     <View
