--- a/Travel Partner/app/src/main/res/layout/fragment_trips2.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_trips2.xml
@@ -7,12 +7,11 @@
     tools:context=".TripsFragment2">
 
     <TextView
+        style="@style/DefaultText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:textSize="20sp"
         android:fontFamily="@font/roboto"
         android:text="@string/new_trip"/>
 
@@ -23,13 +22,11 @@
         android:background="@color/lightGrey"/>
 
     <TextView
+        style="@style/DefaultText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
         android:layout_marginTop="75dp"
-        android:textSize="20sp"
         android:layout_marginStart="30dp"
-        android:fontFamily="@font/roboto"
         android:text="@string/for_how_long"/>
     <TextView
         android:layout_width="wrap_content"
