--- a/Travel Partner/app/src/main/res/layout/fragment_trips4.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_trips4.xml
@@ -8,13 +8,11 @@
     tools:context=".TripsFragment4">
 
     <TextView
+        style="@style/DefaultText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:textSize="20sp"
-        android:fontFamily="@font/roboto"
         android:text="@string/new_trip"/>
 
     <View
@@ -25,13 +23,11 @@
 
 
     <TextView
+        style="@style/DefaultText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
         android:layout_marginTop="75dp"
-        android:textSize="20sp"
         android:layout_marginStart="30dp"
-        android:fontFamily="@font/roboto"
         android:text="@string/where_are_you_going" />
 
 
@@ -62,8 +58,8 @@
         android:fontFamily="@font/roboto"
         android:textAllCaps="false"
         android:layout_marginTop="450dp"
-        android:layout_marginRight="-10dp"
-        android:layout_marginLeft="-140dp"
+        android:layout_marginStart="-10dp"
+        android:layout_marginEnd="-140dp"
         android:backgroundTint="@color/lightGrey"
         android:background="@drawable/previous_trip_button"
         />
