--- a/Travel Partner/app/src/main/res/layout/fragment_trips5.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_trips5.xml
@@ -7,13 +7,11 @@
     tools:context=".TripsFragment5">
 
     <TextView
+        style="@style/DefaultText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:textSize="20sp"
-        android:fontFamily="@font/roboto"
         android:text="@string/new_trip"/>
 
     <View
@@ -23,14 +21,12 @@
         android:background="@color/lightGrey"/>
 
     <TextView
+        style="@style/DefaultText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="80dp"
-        android:textSize="20sp"
-        android:fontFamily="@font/roboto"
         android:text="@string/what_is_the_plan_question"/>
 
     <EditText
