--- a/Travel Partner/app/src/main/res/layout/fragment_search.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_search.xml
@@ -43,12 +43,15 @@
         android:layout_height="wrap_content"
         android:text="@string/example1"
         android:textStyle="bold"
+        android:layout_gravity="center_horizontal"
         android:id="@+id/name"
         android:textColor="@color/search"
         android:textSize="18sp" />
         <TextView
+            android:paddingTop="10dp"
             android:layout_width="wrap_content"
             android:id="@+id/destination_date"
+            android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
             android:text="@string/destination"
             android:textStyle="bold"
@@ -70,21 +73,25 @@
         android:id="@+id/view_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="190dp"
-        android:layout_marginStart="250dp"
+        android:layout_marginTop="250dp"
+        android:layout_gravity="center_horizontal"
         android:textColor="@color/search"
         android:backgroundTint = "@color/white"
         android:text="@string/view_profile" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_marginTop="250dp"
+        android:layout_width="290dp"
+        android:layout_marginTop="500dp"
         android:layout_marginRight="100dp"
         android:layout_marginLeft="100dp"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
+        android:layout_gravity="center_horizontal"
         android:backgroundTint="@color/search"
-        android:text="@string/next" />
+        android:textSize="18sp"
+        android:fontFamily="@font/roboto"
+        android:text="@string/next"
+        />
 
 </FrameLayout>
 </layout>
