--- a/Travel Partner/app/src/main/res/layout/fragment_trips4.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_trips4.xml
@@ -58,8 +58,8 @@
         android:fontFamily="@font/roboto"
         android:textAllCaps="false"
         android:layout_marginTop="450dp"
-        android:layout_marginStart="-10dp"
-        android:layout_marginEnd="-140dp"
+        android:layout_marginRight="-10dp"
+        android:layout_marginLeft="-140dp"
         android:backgroundTint="@color/lightGrey"
         android:background="@drawable/previous_trip_button"
         />
@@ -74,7 +74,6 @@
         android:fontFamily="@font/roboto"
         android:textAllCaps="false"
         android:layout_marginTop="450dp"
-        android:layout_marginBottom="100dp"
         android:layout_marginRight="40dp"
         android:layout_marginLeft="100dp"
         android:background="@drawable/create_trip_button"
