--- a/Travel Partner/app/src/main/res/layout/fragment_profile_view_from_notification.xml
+++ b/Travel Partner/app/src/main/res/layout/fragment_profile_view_from_notification.xml
@@ -222,6 +222,16 @@
             </LinearLayout>
 
         </RelativeLayout>
+        <Button
+            android:id="@+id/send_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="460dp"
+            android:layout_marginStart="260dp"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/teal_200"
+            android:backgroundTint = "@color/white"
+            android:text="@string/send_email" />
 
 
     </RelativeLayout>
